#
# Makefile.am --
#
#      Template to generate the mibs Makefile.in using automake.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am 1715 2011-07-20 09:42:36Z schoenw $
#

MIBDIRS			= iana ietf irtf tubs jacobs site
SUBDIRS			= $(MIBDIRS)
