#
# Makefile.am --
#
#      Template to generate test/dumps Makefile.in using automake.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am 7381 2007-10-19 22:33:28Z schoenw $
#

SUBDIRS = corba imports jax mosy orig-smiv2 smilint-smiv2 \
	  sming smiv1 smiv2 smiv2-smiv2 tree types yang \
	  identifiers metrics xml cm python netsnmp
