#
# Makefile.am --
#
#      Template to generate test/mibs Makefile.in using automake.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am 3836 2006-05-04 08:29:12Z schoenw $
#

EXTRA_DIST		= LIBSMI-TEST-MIB \
			  LIBSMI-TEST-001-MIB LIBSMI-TEST-002-MIB \
			  LIBSMI-TEST-003-MIB LIBSMI-TEST-004-MIB \
			  LIBSMI-TEST-005-MIB LIBSMI-TEST-006-MIB \
			  LIBSMI-TEST-007-MIB LIBSMI-TEST-008-MIB \
			  LIBSMI-TEST-009-MIB LIBSMI-TEST-010-MIB \
			  LIBSMI-TEST-011-MIB LIBSMI-TEST-012-MIB \
			  LIBSMI-TEST-013-MIB LIBSMI-TEST-014-MIB \
			  LIBSMI-TEST-015-MIB LIBSMI-TEST-016-MIB \
			  LIBSMI-TEST-017-MIB LIBSMI-TEST-018-MIB

