#
# Makefile.am --
#
#      Template to generate the mibs/ietf Makefile.in using automake.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am 1433 2002-07-24 11:54:24Z strauss $
#

EXTRA_DIST              = $(shell ls -1 | egrep -v 'CVS|Makefile')
