#
# Makefile.am --
#
#      Template to generate the test/dumps/* Makefile.in using automake.
#
# Copyright (c) 2000 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am 1036 2000-11-13 11:02:49Z strauss $
#

EXTRA_DIST              = $(shell ls -1 | egrep -v 'CVS|Makefile')
