#
# Makefile.am --
#
#      Template to generate the test/dumps/* Makefile.in using automake.
#
# Copyright (c) 2000 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am 1030 2000-11-13 00:06:35Z strauss $
#

EXTRA_DIST              = $(shell ls -1 | egrep -v 'CVS|Makefile')
